# smtp-proto

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: smtp_proto.rs
src/: lib.rs  tokens.rs
src/request/: mod.rs  parser.rs  receiver.rs
src/response/: generate.rs  mod.rs  parser.rs
