[package]
name = "smtp-proto"
description = "SMTP protocol parser"
authors = [ "Stalwart Labs <hello@stalw.art>"]
repository = "https://github.com/stalwartlabs/smtp-proto"
homepage = "https://github.com/stalwartlabs/smtp-proto"
license = "Apache-2.0 OR MIT"
keywords = ["smtp", "lmtp", "protocol", "parser"]
categories = ["email", "parser-implementations"]
readme = "README.md"
version = "0.1.7"
edition = "2021"

[dependencies]
rkyv = { version = "0.8.10", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]

[features]
default = []
rkyv = ["dep:rkyv"]
serde = ["dep:serde"]
